# Learning-Python

./: .gitignore  GAM.py  README.md  app.py  credential.json  googleads.yaml  pyproject.toml
gam/: GAM.py  GamCompany.py  GamLineItem.py  GamNetwork.py  GamOrder.py  GamUser.py  GoogleAdManagerClient.py
responder/: app.py
router/: SampleRouter.py  SchemaRouter.py
sandbox/: method_chain.py  singleton_sample.py
sandbox/gam/: GAM.py  GamCompany.py  GamLineItem.py  GamNetwork.py  GamOrder.py  GamUser.py  GoogleAdManagerClient.py
templates/: hello.html
